# rft

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  auth.md  bun.lockb  docker-compose.yml  package.json  start-database.sh  tailwind.config.ts
assets/: words.json
data/: down.py
data/jcti/: ranges.ts  scores.ts
docs/: stages.md
migrations/2024-03-12-181941_initial_setup/: down.sql  up.sql
migrations/2024-03-17-093030_users/: up.sql
migrations/2024-07-14-052408_add_timestamps_to_user/: down.sql  up.sql
migrations/2024-07-14-060442_add/: down.sql  up.sql
migrations/2024-07-14-075857_iq test schema/: down.sql  up.sql
prisma/: schema.prisma
prisma/migrations/20241105194735_updated_iq_tests/: migration.sql
src/: auth.rs  database.rs  env.js  lib.rs  models.rs  password.rs  schema.rs  secure_token.rs  settings.rs  syllogism.rs  words.rs
src/app/: layout.tsx  page.tsx  pageLayout.tsx
src/app/(pages)/auth/: page.tsx
src/app/(pages)/profile/: page.tsx
src/app/(pages)/stage/: page.tsx
src/app/(pages)/test/: page.tsx
src/app/_components/: card.tsx  client_session_provider.tsx  github_card.tsx  greeting.tsx  navbar.tsx  socialAuth.tsx  stage.tsx  syl.tsx
src/components/ui/: progress.tsx
src/lib/: utils.ts
src/lib/hooks/: syllogism.ts  useStage.ts
src/lib/types/: syllogism_types.ts
src/logic/: constants.ts  reference.ts  syllogism.ts  testing.ts
src/middleware/: mod.rs
src/server/: auth.ts
src/server/api/: root.ts
src/styles/: globals.css
src/utils/: mod.rs
templates/: index.html  layout.html
(+11 files in other folders)
